// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Availability element render component 1`] = `
<div
  className="tribe-editor__availability"
/>
`;

exports[`Availability element render component with available property 1`] = `
<div
  className="tribe-editor__availability"
>
  <span
    className="tribe-editor__label--numeric"
  >
    
    <span
      className="tribe-editor__label--count"
    >
      10
    </span>
    <span
      className="tribe-editor__label--after"
    >
       tickets available
    </span>
  </span>
</div>
`;

exports[`Availability element renders component with available and total properties 1`] = `
<div
  className="tribe-editor__availability"
>
  <span
    className="tribe-editor__label--numeric"
  >
    
    <span
      className="tribe-editor__label--count"
    >
      1
    </span>
    <span
      className="tribe-editor__label--after"
    >
       ticket available
    </span>
  </span>
  <span
    className="tribe-editor__availability--separator"
  >
    |
  </span>
  <span
    className="tribe-editor__label--numeric"
  >
    
    <span
      className="tribe-editor__label--count"
    >
      20
    </span>
    <span
      className="tribe-editor__label--after"
    >
       total tickets
    </span>
  </span>
</div>
`;

exports[`Availability element renders component with custom separator 1`] = `
<div
  className="tribe-editor__availability"
>
  <span
    className="tribe-editor__label--numeric"
  >
    
    <span
      className="tribe-editor__label--count"
    >
      2
    </span>
    <span
      className="tribe-editor__label--after"
    >
       tickets available
    </span>
  </span>
  <span
    className="tribe-editor__availability--separator"
  >
     [*] 
  </span>
  <span
    className="tribe-editor__label--numeric"
  >
    
    <span
      className="tribe-editor__label--count"
    >
      20
    </span>
    <span
      className="tribe-editor__label--after"
    >
       total tickets
    </span>
  </span>
</div>
`;

exports[`Availability element renders component with total property 1`] = `
<div
  className="tribe-editor__availability"
>
  <span
    className="tribe-editor__label--numeric"
  >
    
    <span
      className="tribe-editor__label--count"
    >
      20
    </span>
    <span
      className="tribe-editor__label--after"
    >
       total tickets
    </span>
  </span>
</div>
`;
